<resources>
    <string name="app_name">Wanderer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>


    <string name="menu_1">ALL CITIES</string>
    <string name="menu_2">BOOK TICKET</string>
    <string name="menu_3">VISA ONLINE</string>
    <string name="info_1">About This App</string>
    <string name="info_2">Privacy Statement</string>
    <string name="info_3">Feedback</string>
    <string name="info_4">Review App</string>
    <string name="info_5">Log Out</string>
    <string-array name="menus">
        <item>menu 1</item>
        <item>menu 2</item>
    </string-array>

    <string-array name="menu_info">
        <item>menu 1</item>
        <item>menu 2</item>
        <item>menu 3</item>
        <item>menu 4</item>
        <item>menu 5</item>
    </string-array>
    <integer-array name="thumb_menus">
        <item>1</item>
    </integer-array>
    <string name="title_activity_search">SearchActivity</string>

    <string name="bannerAd">ca-app-pub-2686172208740038/3728052288</string>
    <string name="fullScreen">ca-app-pub-2686172208740038/9910317258</string>


    //-------------for test
    <!--    <string name="bannerAd">ca-app-pub-3940256099942544/6300978000</string>-->
    <!--    <string name="fullScreen">ca-app-pub-3940256099942544/1033173000</string>-->

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_detail">Map</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_privacy">Privacy Statesment</string>
    <string name="title_activity_about">About This App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">  Username</string>
    <string name="prompt_email">  Email</string>
    <string name="prompt_password">  Password</string>
    <string name="prompt_password_confirm">  Confirm Password</string>
    <string name="action_skip">Skip</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_detail_tabs">DetailTabsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_weather">WeatherActivity</string>

    <!--Login Activity-->
    <string name="title_login_btn">LOGIN</string>
    <string name="title_signup_btn">SIGN UP</string>
    <string name="terms_and_conditions">By singing up, you agree to the Terms of Service and Privacy Policy</string>

    <string name="title_dialog_forgot_password">Forgot Password</string>
    <string name="msg_dialog_forgot_password">"Enter your email address, we'll send you reset password instructions."</string>


    <string name="title_dialog_rate_app">Rate out App</string>
    <string name="msg_dialog_rate_app">If you love our app. Please take a movement to rate it in the App Store</string>

    <string name="title_login_btn_menu">Login</string>
    <string name="title_signup_btn_menu">Sign Up</string>

    <string name="degrees_placeholderC" translatable="false">%d°C</string>
    <string name="degrees_placeholderF" translatable="false">%d°F</string>
    <string name="degrees_icon" translatable="false">°</string>
    <string name="now">NOW</string>
    <string name="today">today</string>
    <string name="_5_day">5 day</string>
    <string name="saved_latitude">saved_latitude</string>
    <string name="saved_longitude">saved_longitude</string>
    <integer name="latitude_default">-31</integer>
    <integer name="longitude_default">-64</integer>

    <string name="msg_welcome_1">Get Offline Maps</string>
    <string name="msg_welcome_2">Wander recommendation that\nmatch your favourite list</string>
    <string name="msg_welcome_3">The wandered city visited\navailable offline</string>

    <string name="date_yesterday">Yesterday</string>
    <string name="date_recent_second">Just moment</string>
    <string name="minute_ago">Minute ago</string>
    <string name="hour_ago">Hour ago</string>
    <string name="day_ago">Days ago</string>
    <string name="intro_title_one">Get Backpacked</string>
    <string name="intro_title_two">Get Recommended</string>
    <string name="intro_title_three">Get Started</string>
</resources>
