<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/dialog_holder">

    <LinearLayout
        style="@style/dialog_background"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large">

        <TextView
            android:id="@+id/dialogTitle"
            style="@style/dialog_title"
            android:text="@string/title_dialog_forgot_password" />

        <TextView
            android:id="@+id/dialogMessage"
            style="@style/dialog_message"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:gravity="left"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:text="@string/msg_dialog_forgot_password"
            android:textColor="@color/colorGrey600"
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/margin_large"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="6dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_email" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginLeft="@dimen/margin_large">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/signupEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:drawablePadding="@dimen/margin_small"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColorHint="@color/colorGrey200" />

                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOke"
                style="@style/dialog_button"
                android:layout_marginBottom="@dimen/margin_extra_large"

                android:background="@drawable/btn_round_login_normal"
                android:text="Send" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>