<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:id="@+id/menuAllCity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_menu_height">

        <ImageView
            android:layout_width="@dimen/nav_item_menu_thumb"
            android:layout_height="@dimen/nav_item_menu_thumb"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_allcities" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:gravity="center_vertical|left"
            android:text="@string/menu_1"
            android:textColor="@color/new_color"
            android:textSize="@dimen/nav_item_menu_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuBookTicket"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_menu_height">

        <ImageView
            android:layout_width="@dimen/nav_item_menu_thumb"
            android:layout_height="@dimen/nav_item_menu_thumb"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_tickets" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:gravity="center_vertical|left"
            android:text="@string/menu_2"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_item_menu_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuVisaOnline"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_item_menu_height">

        <ImageView
            android:layout_width="@dimen/nav_item_menu_thumb"
            android:layout_height="@dimen/nav_item_menu_thumb"
            android:layout_gravity="center_vertical"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_tickets" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_medium"
            android:gravity="center_vertical|left"
            android:text="@string/menu_3"
            android:textColor="@color/white"
            android:textSize="@dimen/nav_item_menu_title" />

    </LinearLayout>
</LinearLayout>
