<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.my.travel.wanderer.activity.signup.SignupActivity">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:padding="@dimen/margin_medium"
        android:src="@drawable/icon_close"
        app:tint="@color/colorGrey900" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />


        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_extra_large"
            android:layout_marginRight="@dimen/margin_extra_large">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"

                    android:background="@drawable/indi_btn_facebook_login_bg">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/margin_medium"
                        android:layout_toLeftOf="@+id/btnLoginFb"
                        android:src="@drawable/icon_facebook" />

                    <Button
                        android:id="@+id/btnLoginFb"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"

                        android:background="@color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="Continue with Facebook"
                        android:textColor="@color/colorGrey50" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    android:gravity="center"
                    android:text="Or use your Email"
                    android:textSize="16dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/btnLoginInput"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/title_login_btn"
                            android:textColor="@color/colorGrey300"
                            android:textSize="@dimen/text_login_btn" />

                        <View
                            android:id="@+id/indicatorLogin"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorGrey300" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/btnSignupInput"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/title_signup_btn"
                            android:textColor="@color/colorBlue500"
                            android:textSize="@dimen/text_login_btn" />

                        <View
                            android:id="@+id/indicatorSignup"
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorBlue500" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/icon_email"
                                android:drawablePadding="@dimen/margin_small"
                                android:hint="@string/prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorGrey200" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/icon_password"
                                android:drawablePadding="@dimen/margin_small"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorGrey200" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/email_sign_in_button"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_extra_large_2"
                            android:background="@drawable/btn_round_login_normal"
                            android:text="@string/action_sign_in"
                            android:textColor="@color/colorGrey50"
                            android:textStyle="bold" />


                        <Button
                            android:id="@+id/btnForgotPassword"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_extra_large"
                            android:background="@color/transparent"
                            android:text="@string/action_forgot_password"
                            android:textAllCaps="false"
                            android:textColor="@color/colorBlue500"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/signupUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/icon_usernam"
                                android:drawablePadding="@dimen/margin_small"
                                android:hint="@string/prompt_username"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorGrey200" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/signupEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/icon_email"
                                android:drawablePadding="@dimen/margin_small"
                                android:hint="@string/prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorGrey200" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/signupPpassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/icon_password"
                                android:drawablePadding="@dimen/margin_small"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorGrey200" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/signupPpasswordConfirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/icon_password"
                                android:drawablePadding="@dimen/margin_small"
                                android:hint="@string/prompt_password_confirm"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColorHint="@color/colorGrey200" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/btnSignUp"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_extra_large_2"
                            android:background="@drawable/btn_round_login_normal"
                            android:text="@string/action_sign_up"
                            android:textColor="@color/colorGrey50"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>
